k8s/exchange-kerberos-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-go
  namespace: messenger-stage
spec:
  template:
    spec:
      volumes:
        - name: exchange-kerberos-config
          secret:
            secretName: exchange-kerberos-secrets
            items:
              - key: krb5.conf
                path: krb5.conf
              - key: focus.keytab
                path: focus.keytab
      containers:
        - name: api-go
          volumeMounts:
            - name: exchange-kerberos-config
              mountPath: /etc/krb5
              readOnly: true
