k8s/go-builder-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-builder
  namespace: kaniko
spec:
  nodeSelector:
    kubernetes.io/hostname: t4-k3s-mkuryatnikov-05-fts
  containers:
  - name: builder
    image: golang:1.25-alpine
    command: ["sleep", "3600"]
    resources:
      requests:
        memory: "4Gi"
        cpu: "500m"
      limits:
        memory: "7Gi"
  restartPolicy: Never
