k8s/kaniko-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-api
  namespace: kaniko
spec:
  nodeSelector:
    kubernetes.io/hostname: t4-k3s-mkuryatnikov-05-fts
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest
    args:
    - "--dockerfile=/workspace/Dockerfile"
    - "--context=dir:///workspace"
    - "--destination=docker.io/qmishnik/focus-api:latest"
    - "--destination=docker.io/qmishnik/focus-api:v1.1"
    volumeMounts:
    - name: workspace
      mountPath: /workspace
    - name: docker-config
      mountPath: /kaniko/.docker
  volumes:
  - name: workspace
    emptyDir: {}
  - name: docker-config
    secret:
      secretName: regcred
      items:
      - key: .dockerconfigjson
        path: config.json
  restartPolicy: Never
